--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,8 +3,9 @@
 
     <string name="app_name">ADG Mobile</string>
 	<string name="noContentFound">Aucun contenu trouvé</string>
-	
-	<string name="hello_world"><b>Hello, <i>World!</i></b></string>
+	<string name="podcast">Podcast</string>
+	<string name="twitter">Twitter</string>
+	<string name="loading">Chargement&#8230;</string>
 	
 	<string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
 	<string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
