--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
 	<string name="podcast">Podcast</string>
 	<string name="twitter">Twitter</string>
 	<string name="loading">Chargement&#8230;</string>
+	<string name="play">Jouer</string>
 	
 	<string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
 	<string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
