correction de la notification bar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,6 +28,7 @@
 	<string name="contactSupport">Support</string>
 	<string name="contactEmailSubject">Contact - Analyse des Geeks</string>
 	<string name="sendEmail">Envoyer un courriel</string>
+	<string name="analyseDesGeeks">Analyse des Geeks</string>
 		
 	
 	<string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
